--- a/index.html
+++ b/index.html
@@ -42,7 +42,32 @@
         <a href="#"><button class="btn">create a free account</button></a>
         <a class="contact-sales" href="#">or contact sales</a>
          </span>
+         <section>
+            <article class="trusted">
+                Trusted by over 200,000 businesses
+            </article>
+            <section class="we-trust">
+            <div class="c-logo ">
+                <img class="u-lazyload--is-done" data-src="https://assets.paystack.com/assets/img/logos/merchants/Dominos-Plain.svg" alt="Domino's Pizza logo" src="https://assets.paystack.com/assets/img/logos/merchants/Dominos-Plain.svg">
+            </div>
+            <div class="c-logo ">
+                <img class="u-lazyload--is-done" data-src="https://assets.paystack.com/assets/img/logos/merchants/mtn-group-grayscale.svg" alt="MTN logo" src="https://assets.paystack.com/assets/img/logos/merchants/mtn-group-grayscale.svg">
+            </div>
+            <div class="c-logo ">
+                <img class="u-lazyload--is-done" data-src="https://assets.paystack.com/assets/img/logos/merchants/Bolt-Stack-Blue_200304_153027.svg" alt="Bolt logo" src="https://assets.paystack.com/assets/img/logos/merchants/Bolt-Stack-Blue_200304_153027.svg">
+            </div>
+            <div class="c-logo u-hidden--mobile">
+                <img class=" u-lazyload--is-done" data-src="https://assets.paystack.com/assets/img/logos/merchants/Axa-mansard-_-Plain.svg" alt="AXA Mansard logo" src="https://assets.paystack.com/assets/img/logos/merchants/Axa-mansard-_-Plain.svg">
+            </div>
+            </section>
+            <section>
+            <article class="watch">
+                Watch MTN chief Transformation Officer, Olubayo Adekanmbi, discuss working with paystack
+            </article>
+            </section>
         </section>
+        </section>
+       
         
         <svg width="1565" height="712" viewBox="0 0 1565 712" fill="none" xmlns="http://www.w3.org/2000/svg">
             <g id="worldmap">
