--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
         <a href="#"><button class="btn">create a free account</button></a>
         <a class="contact-sales" href="#">or contact sales</a>
          </span>
-         <section>
+         <section class=>
+            <div class="sec">
             <article class="trusted">
                 Trusted by over 200,000 businesses
             </article>
@@ -60,15 +61,13 @@
                 <img class=" u-lazyload--is-done" data-src="https://assets.paystack.com/assets/img/logos/merchants/Axa-mansard-_-Plain.svg" alt="AXA Mansard logo" src="https://assets.paystack.com/assets/img/logos/merchants/Axa-mansard-_-Plain.svg">
             </div>
             </section>
-            <section>
+            </div>
             <article class="watch">
                 Watch MTN chief Transformation Officer, Olubayo Adekanmbi, discuss working with paystack
             </article>
             </section>
         </section>
-        </section>
        
-        
         <svg width="1565" height="712" viewBox="0 0 1565 712" fill="none" xmlns="http://www.w3.org/2000/svg">
             <g id="worldmap">
               <rect width="1563.11" height="709.275" fill="black" fill-opacity="0" transform="translate(1 1)"></rect>
