--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
        <a  class="log"href="#"><img class="logo" src="./image/paystacklogo.png">Paystack</a>
        </figure>
             <ul class="nav-list">
-            <li> <a href="#"></a>Why Paystack</li>
-            <li> <a href="#"></a>Customers</li>
-            <li> <a href="#"></a>Pricing</li>
-            <li> <a href="#"></a>Learn</li>
+            <li> <a href="#">Why Paystack</a></li>
+            <li> <a href="./customers.html">Customers</a></li>
+            <li> <a href="#">Pricing</a></li>
+            <li> <a href="#">Learn</a></li>
             </ul>
            </div>
            <div class="second-nav">
@@ -29,7 +29,7 @@
             <li><button class="btn">create free account</button></li>
              </ul>
         </div>
-    </section  class=body-image>
+    </section>
     <section>
         <section class="modern">
             <article>
@@ -42,7 +42,7 @@
         <a href="#"><button class="btn">create a free account</button></a>
         <a class="contact-sales" href="#">or contact sales</a>
          </span>
-         <section class=>
+         <section class=main>
             <div class="sec">
             <article class="trusted">
                 Trusted by over 200,000 businesses
@@ -255,6 +255,8 @@
             </defs>
           </svg>
     </section>
+    <section>
+       
 
     </main>
 </body>
