--- a/customers.html
+++ b/customers.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="./styles/customers.css">
 </head>
 <body>
-   <div class="nav">
+   <nav class="nav">
     <section class="nav-1">
     <figure class="paystack">
-       <a href="#" ><img class="paystack-logo" src="./image/paystacklogo.png">Paystack</a>
+       <a href="./index.html"><img class="paystack-logo" src="./image/Paystack-Logo.svg"></a>
     </figure > 
         <a href="#"><li></li>Why Paystack</a>
         <a href="#"><li></li>Customers</a>
@@ -25,7 +25,7 @@
         <a href="#"><li></li>Login</a>
         <button class="btn">Create free account</button>
     </section> 
-   </div>
+   </nav>
    
    <div class="testimonials">
      <article>
@@ -35,7 +35,7 @@
 </div>
 
             <!--reviews row 1-->
-            <!---->
+            <!--MTN-->
    <div class="review">
 
    <section class="reviews">
@@ -52,6 +52,7 @@
         </section>
    </section>
 
+         <!--AXA Mansard-->
    <section class="reviews">
     <figure class="logo-fig"><img class="logo" src="./image/mansard.svg"></figure>
     <article class="review-article">
@@ -65,7 +66,7 @@
         </article>
     </section>
      </section>
-
+         <!--Bolt-->
      <section class="reviews">
         <figure class="logo-fig"><img class="logo" src="./image/bolt.svg"></figure>
         <article class="review-article">
@@ -80,8 +81,8 @@
         </section>
          </section> 
         </div>
-
          <!--review row 2-->
+         <!--Carbon-->
          <div class="review">
 
             <section class="reviews">
@@ -97,7 +98,7 @@
                      </article>
                  </section>
             </section>
-         
+            <!--Nairabet-->
             <section class="reviews">
              <figure class="logo-fig"><img class="logo" src="./image/nairabet.jpg"></figure>
              <article class="review-article">
@@ -111,7 +112,7 @@
                  </article>
              </section>
               </section>
-         
+               <!--Buycoins-->
               <section class="reviews">
                  <figure class="logo-fig"><img class="logo" src="./image/buycoins.png"></figure>
                  <article class="review-article">
@@ -146,7 +147,7 @@
             <section class="reviews">
              <figure class="logo-fig"><img class="logo" src="./image/businessday.png"></figure>
              <article class="review-article">
-                We added Paystack as one of our payment options without announcing to our customers, and within a month it shot up to the number one most used option.
+               We're building a dominant online presence with over 10,000 subscribers already, and Paystack’s recurring billing feature makes this possible and easy.  
              </article>
              <section class="profile">
                  <img class="profile-img" src="./image/businessday-img.jpg" alt="businessday-img">
@@ -241,7 +242,6 @@
              <img class="profile-img" src="./image/ren-img.png" alt="businessday-img">
              <article class="profile-article">
                 Daniel Watts
-
                 <span class="office">Chief Risk Officer, Renmoney</span> 
              </article>
          </section>
@@ -306,177 +306,181 @@
  </section> 
 </div>
 <div class="review" >
-    <!--Thrive-->
+    <!--Bento-->
 <section class="reviews">
-     <figure class="logo-fig"><img class="logo" src="./image/thrive.png"></figure>
+     <figure class="logo-fig"><img class="logo" src="./image/Bento-Logo.png"></figure>
      <article class="review-article">
-        We use Paystack's Transactions Page to generate financial reports, and troubleshoot payment related issues that our customers may have!
+      With Paystack Transfers, we can easily help companies transfer salaries to their employees, pay their health insurance bills and taxes.
      </article>
      <section class="profile">
-         <img class="profile-img" src="./image/thrive-img.jpeg" alt="branch-image">
+         <img class="profile-img" src="./image/bento-img.png" alt="bento-image">
          <article class="profile-article">      
-       Arikawe Ayodeji
-            <span class="office">Chief Technology Officer, Thrive Agric</span> 
+            Ebun Okubanjo
+            <span class="office">Co-founder, Bento</span> 
          </article>
      </section>
 </section>
-<!--bento-->
+<!--Accounteer-->
 <section class="reviews">
- <figure class="logo-fig"><img class="logo" src="./image/nairabox.png"></figure>
+ <figure class="logo-fig"><img class="logo" src="./image/acounteer.png"></figure>
  <article class="review-article">
-    Before Paystack, we had so many chargeback issues. Now, Paystack has made it very easy to manage chargebacks.
+   Paystack has helped us expand our business to one of Africa’s fastest growing markets. Paystack should be top-of-mind for any business going global.
  </article>
  <section class="profile">
-     <img class="profile-img" src="./image/nairab-img.jpg" alt="nairabox-img">
+     <img class="profile-img" src="./image/account-img.jpg" alt="accounteer">
      <article class="profile-article">
-        Adetokunbo Adetona
-        <span class="office">Director of Finance & Technology, Nairabox</span> 
-     </article>
+      Merijn Campsteyn
+        <span class="office">CEO, Accounteer</span>
+      </article>
  </section>
-  </section>
-<!--accounteer-->
+ <article class="bottom">
+   <span class="online">Online accounting software</span>
+ </article>
+</section>
+<!--fitness-->
   <section class="reviews">
-     <figure class="logo-fig"><img class="logo" src="./image/guo.png"></figure>
+     <figure class="logo-fig"><img class="logo" src="./image/fitness.png"></figure>
      <article class="review-article">
-        With webhooks, Paystack automatically notifies us of all successful transactions even when the customer's browser fails to send us a notification.
+      Before Paystack, billing recurrently was extremely complex. Now, it’s so easy that we no longer worry about payment and we’re freed up to be creative
      </article>
      <section class="profile">
-     <img class="profile-img" src="./image/GUO-img.png" alt="guo-image">
+     <img class="profile-img" src="./image/fitness-img.jpg" alt="guo-image">
      <article class="profile-article">
-        Femi Jacob
-   <span class="office">Chief Technology Officer, GUO Transport</span> 
+      Chidozie David Okonkwo
+   <span class="office">Co-founder, Fitness Central</span> 
  </article>
 </section>
 </section> 
 </div>
 <div class="review" >
-    <!--fitness-->
+    <!--Sportbook-->
 <section class="reviews">
-     <figure class="logo-fig"><img class="logo" src="./image/thrive.png"></figure>
+     <figure class="logo-fig"><img class="logo" src="./image/sportbookcloud.jpg"></figure>
      <article class="review-article">
-        We use Paystack's Transactions Page to generate financial reports, and troubleshoot payment related issues that our customers may have!
+      Reliable payment logistics are key to our industry and Paystack has played a major role in our expansion across Nigeria.
      </article>
      <section class="profile">
-         <img class="profile-img" src="./image/thrive-img.jpeg" alt="branch-image">
+         <img class="profile-img" src="./image/sportbook-img.jpg">
          <article class="profile-article">      
-       Arikawe Ayodeji
-            <span class="office">Chief Technology Officer, Thrive Agric</span> 
+            Daniel Grüderich
+
+            <span class="office">CEO, Sportsbookcloud</span> 
          </article>
      </section>
 </section>
-<!--sport-->
-<section class="reviews">
- <figure class="logo-fig"><img class="logo" src="./image/nairabox.png"></figure>
- <article class="review-article">
-    Before Paystack, we had so many chargeback issues. Now, Paystack has made it very easy to manage chargebacks.
- </article>
- <section class="profile">
-     <img class="profile-img" src="./image/nairab-img.jpg" alt="nairabox-img">
-     <article class="profile-article">
-        Adetokunbo Adetona
-        <span class="office">Director of Finance & Technology, Nairabox</span> 
-     </article>
- </section>
-  </section>
 <!--supermart-->
+<section class="reviews">
+ <figure class="logo-fig"><img class="logo" src="./image/Supermart.ng-logo-1.png"></figure>
+ <article class="review-article">
+   We’re satisfied with Paystack's ease of use, availability of useful reports, responsiveness, and most importantly, the high success rate of payments.
+ </article>
+ <section class="profile">
+     <img class="profile-img" src="./image/supermart-img.jpg">
+     <article class="profile-article">
+      Gbolahan Fagbure
+        <span class="office">Co-Founder & CEO, Supermartng</span> 
+     </article>
+ </section>
+  </section>
+<!--Buycoins-->
   <section class="reviews">
-     <figure class="logo-fig"><img class="logo" src="./image/guo.png"></figure>
+     <figure class="logo-fig"><img class="logo" src="./image/buycoins.png"></figure>
      <article class="review-article">
-        With webhooks, Paystack automatically notifies us of all successful transactions even when the customer's browser fails to send us a notification.
+      Paystack’s BVN & Bank Account Look-Up features help us carry out seamless and useful KYC that's invaluable to our business
      </article>
      <section class="profile">
-     <img class="profile-img" src="./image/GUO-img.png" alt="guo-image">
-     <article class="profile-article">
-        Femi Jacob
-   <span class="office">Chief Technology Officer, GUO Transport</span> 
+     <img class="profile-img" src="./image/buycoins-img.jpg">
+     <article class="profile-article">     
+      Timi Ajiboye
+   <span class="office">CEO, BuyCoins</span> 
  </article>
 </section>
 </section> 
 </div>
 <div class="review" >
-    <!--buycoins-->
+    <!--fint-->
 <section class="reviews">
-     <figure class="logo-fig"><img class="logo" src="./image/thrive.png"></figure>
+     <figure class="logo-fig"><img class="logo" src="./image/fint.png"></figure>
      <article class="review-article">
-        We use Paystack's Transactions Page to generate financial reports, and troubleshoot payment related issues that our customers may have!
+      Paystack is an essential part of the whole FINT ecosystem and they are one of the parts that have performed their role without fault. Great Solution!
      </article>
      <section class="profile">
-         <img class="profile-img" src="./image/thrive-img.jpeg" alt="branch-image">
+         <img class="profile-img" src="./image/fint-img.jpg">
          <article class="profile-article">      
-       Arikawe Ayodeji
-            <span class="office">Chief Technology Officer, Thrive Agric</span> 
+            Nnamdi Okeke
+            <span class="office">CTO FINT</span> 
          </article>
      </section>
 </section>
-<!--fint-->
-<section class="reviews">
- <figure class="logo-fig"><img class="logo" src="./image/nairabox.png"></figure>
- <article class="review-article">
-    Before Paystack, we had so many chargeback issues. Now, Paystack has made it very easy to manage chargebacks.
- </article>
- <section class="profile">
-     <img class="profile-img" src="./image/nairab-img.jpg" alt="nairabox-img">
-     <article class="profile-article">
-        Adetokunbo Adetona
-        <span class="office">Director of Finance & Technology, Nairabox</span> 
-     </article>
- </section>
-  </section>
 <!--st gregory-->
+<section class="reviews">
+ <figure class="logo-fig"><img class="logo" src="./image/St.-Gregorys-College_180813_113609.svg"></figure>
+ <article class="review-article">
+   Before Paystack, reconciliation was a big issue and the process used to take weeks. With Paystack, reconciliation is very fast, simple, and easy.
+ </article>
+ <section class="profile">
+     <img class="profile-img" src="./image/st-greg-img.jpg">
+     <article class="profile-article">
+            Alex Onyia
+        <span class="office">IT Consultant, St. Gregory's College, Ikoyi</span> 
+     </article>
+ </section>
+  </section>
+<!--afritikets-->
   <section class="reviews">
-     <figure class="logo-fig"><img class="logo" src="./image/guo.png"></figure>
+     <figure class="logo-fig"><img class="logo" src="./image/affritickets.png"></figure>
      <article class="review-article">
-        With webhooks, Paystack automatically notifies us of all successful transactions even when the customer's browser fails to send us a notification.
+      Paystack works reliably, they’ve contributed a lot to our growth & we rely on their Detailed Error Reporting feature to resolve payment issues.
      </article>
      <section class="profile">
-     <img class="profile-img" src="./image/GUO-img.png" alt="guo-image">
+     <img class="profile-img" src="./image/afri-img.jpg" alt="afritiket-image">
      <article class="profile-article">
-        Femi Jacob
-   <span class="office">Chief Technology Officer, GUO Transport</span> 
+        Margaret Adetimehin
+   <span class="office">Relationship Manager, Afritickets Limited</span> 
  </article>
 </section>
 </section> 
 </div>
 <div class="review" >
-    <!--afri-->
+    <!--stuttern-->
 <section class="reviews">
-     <figure class="logo-fig"><img class="logo" src="./image/thrive.png"></figure>
+     <figure class="logo-fig"><img class="logo" src="./image/stutern.png"></figure>
      <article class="review-article">
-        We use Paystack's Transactions Page to generate financial reports, and troubleshoot payment related issues that our customers may have!
+      The Paystack Dashboard gives us a succinct summary of all our transactions. It makes getting paid really easy.
      </article>
      <section class="profile">
-         <img class="profile-img" src="./image/thrive-img.jpeg" alt="branch-image">
+         <img class="profile-img" src="./image/stutern-img.jpg" alt="branch-image">
          <article class="profile-article">      
-       Arikawe Ayodeji
-            <span class="office">Chief Technology Officer, Thrive Agric</span> 
+            Kehinde Ayanleye
+            <span class="office">Co-Founder, Stutern</span> 
          </article>
      </section>
 </section>
-<!--stuttern-->
+<!--smallchops-->
 <section class="reviews">
- <figure class="logo-fig"><img class="logo" src="./image/nairabox.png"></figure>
+ <figure class="logo-fig"><img class="logo" src="./image/smallchops.png"></figure>
  <article class="review-article">
-    Before Paystack, we had so many chargeback issues. Now, Paystack has made it very easy to manage chargebacks.
+   Our customers trust the Paystack brand, so we completely eliminated Pay on Delivery, and accepted payments online instead.
  </article>
  <section class="profile">
-     <img class="profile-img" src="./image/nairab-img.jpg" alt="nairabox-img">
+     <img class="profile-img" src="./image/smallchops-img.jpg" alt="nairabox-img">
      <article class="profile-article">
-        Adetokunbo Adetona
-        <span class="office">Director of Finance & Technology, Nairabox</span> 
+      Uche Ukonu Jnr
+        <span class="office">Founder & CEO, SmallchopsNG</span> 
      </article>
  </section>
   </section>
-<!--small chops-->
+<!--workstation-->
   <section class="reviews">
-     <figure class="logo-fig"><img class="logo" src="./image/guo.png"></figure>
+     <figure class="logo-fig"><img class="logo" src="./image/workstation.jpg"></figure>
      <article class="review-article">
-        With webhooks, Paystack automatically notifies us of all successful transactions even when the customer's browser fails to send us a notification.
+      The more members we can bill recurrently, the less we have to worry about them forgetting to pay. Paystack lets us bill recurrently, conveniently.
      </article>
      <section class="profile">
-     <img class="profile-img" src="./image/GUO-img.png" alt="guo-image">
+     <img class="profile-img" src="./image/GUO-img.png" alt="workstation-img">
      <article class="profile-article">
-        Femi Jacob
-   <span class="office">Chief Technology Officer, GUO Transport</span> 
+      Michelle Andrade
+   <span class="office">Chief Operating Officer, Workstation</span> 
  </article>
 </section>
 </section> 
