--- a/customers.html
+++ b/customers.html
@@ -14,9 +14,9 @@
        <a href="./index.html"><img class="paystack-logo" src="./image/Paystack-Logo.svg"></a>
     </figure > 
         <a href="#"><li></li>Why Paystack</a>
-        <a href="#"><li></li>Customers</a>
-        <a href="#"><li></li>Pricing</a>
-        <a href="#"><li></li>Learn</a>
+        <a href="./customers.html"><li></li>Customers</a>
+        <a href="./pricing.html"><li></li>Pricing</a>
+        <a href="./learn.html"><li></li>Learn</a>
     </section>
 
     <section class="nav-2">
