--- a/index.html
+++ b/index.html
@@ -14,30 +14,76 @@
        <a href="#" ><img class="paystack-logo" src="./image/Paystack-Logo.svg"></a>
     </figure > 
         <a href="#"><li></li>Why Paystack</a>
-        <a href="#"><li></li>Customers</a>
-        <a href="#"><li></li>Pricing</a>
-        <a href="#"><li></li>Learn</a>
+        <a href="./customers.html"><li></li>Customers</a>
+        <a href="./pricing.html"><li></li>Pricing</a>
+        <a href="./learn.html"><li></li>Learn</a>
     </section>
     <section class="nav-2">
         <a href="#"><li></li>Developers</a>
         <a href="#"><li></li>Support</a>
         <a href="#"><li></li>Login</a>
-        <a><button class="btn">Create free account</button></a>
+        <a href=""><button class="btn">Create free account</button></a>
     </section> 
   </nav>
   <div class="main">
     <section class="modern">
       <article >
-        <h2>Modern online and offline payments for Africa
+        <h2>Modern online and offline payments for Africa</h2>
           <span>Paystack helps businesses in Africa get paid by anyone, anywhere in the world</span>
-        </h2>
+          <section class="modern-btn">
+            <button class="btn">create a free account</button> <span>or contact sales</span>
+          </section>  
       </article>
-      
     </section>
 
+    <section class="modern-img">
     <figure>
       <img src="./image/background-image.svg">
-    </figure>  
-  </div>
+    </figure> 
+  </section> 
+</div>
+  <div class=div-two>
+<section class="trustee">
+  <span>Trusted by over 200,000 businesses</span>
+<figure>
+  <img src="./image/Dominos-Plain.svg" alt="dom">
+  <img src="./image/mtn-group-grayscale.svg" alt="mtn">
+  <img src="./image/Bolt-Stack-Blue_200304_153027.svg" alt="bolt">
+  <img src="./image/Axa-mansard-_-Plain.svg" alt="axa">
+</figure>
+</section>
+
+<span>Watch MTN Chief Transformation Officer, Olubayo Adekanmbi, discuss working with Paystack</span>
+</div>
+ <div class="simple">
+  <h2> Simple, easy payments</h2>
+  <span>Building a business is hard. Getting paid shouldn't be.</span>
+ </div>
+ <div class="delight">
+    <figure>
+      <img src="./image/Collect-Payments.gif" alt="">
+    </figure>
+    <section>
+    <h2>Delight customers with a seamless payments experience</h2>
+    <span>Give your customers the gift of modern, frictionless, painless payments. Integrate Paystack once and let your customers pay you however they want.</span>
+    
+    <span class="payment-type">
+    <ul>
+      <li>✓ Card</li>
+      <li>✓ Bank Account</li>
+      <li>✓ Bank Transfer</li>
+      <li>✓ USSD</li>
+    </ul>
+
+    <ul>
+      <li> Apple Pay</li>
+      <li>✓ Visa QR</li>
+      <li>✓ Mobile Money</li>
+      <li>✓ POS</li>
+    </ul>
+  </span>
+  </section>
+ </div>
+  
 </body>
 </html>   
