--- a/pricing.html
+++ b/pricing.html
@@ -3,9 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Paystack-Pricing</title>
+    <link rel="stylesheet" href="./styles/pricing.css">
 </head>
 <body>
-    
+    <nav class="nav">
+        <section class="nav-1">
+        <figure class="paystack">
+           <a href="#" ><img class="paystack-logo" src="./image/Paystack-Logo.svg"></a>
+        </figure > 
+            <a href="#"><li></li>Why Paystack</a>
+            <a href="./customers.html"><li></li>Customers</a>
+            <a href="#"><li></li>Pricing</a>
+            <a href="#"><li></li>Learn</a>
+        </section>
+        <section class="nav-2">
+            <a href="#"><li></li>Developers</a>
+            <a href="#"><li></li>Support</a>
+            <a href="#"><li></li>Login</a>
+            <a><button class="btn">Create free account</button></a>
+        </section> 
+      </nav>
+
+        <div class="pricing-for">
+        <span class="for" >pricing for</span>
+        <h2>Simple, fair prcing</h2>
+        <span class="pay">Paystack only makes money when you do. </span>
+        </div>
+        <div>
+            <section class="local">
+                    
+            </section>
+            <section class="internatinal">
+
+            </section>
+        </div>      
 </body>
 </html>
