--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <a href="#"><li></li>Developers</a>
         <a href="#"><li></li>Support</a>
         <a href="#"><li></li>Login</a>
-        <a href=""><button class="btn">Create free account</button></a>
+        <a href="./freeaccount.html"><button class="btn">Create free account</button></a>
     </section> 
   </nav>
   <div class="main">
@@ -69,19 +69,24 @@
     
     <span class="payment-type">
     <ul>
-      <li>✓ Card</li>
-      <li>✓ Bank Account</li>
-      <li>✓ Bank Transfer</li>
-      <li>✓ USSD</li>
+      <li><img src="./image/check-tick.webp" alt="tick">Card</li>
+      <li><img src="./image/check-tick.webp" alt="tick">Bank Account</li>
+      <li> <img src="./image/check-tick.webp" alt="tick">Bank Transfer</li>
+      <li><img src="./image/check-tick.webp" alt="tick">USSD</li>
     </ul>
-
+ 
     <ul>
-      <li> Apple Pay</li>
-      <li>✓ Visa QR</li>
-      <li>✓ Mobile Money</li>
-      <li>✓ POS</li>
+      <li><img src="./image/check-tick.webp" alt="tick">Apple Pay</li>
+      <li><img src="./image/check-tick.webp" alt="tick">Visa QR</li>
+      <li><img src="./image/check-tick.webp" alt="tick">Mobile Money</li>
+      <li><img src="./image/check-tick.webp" alt="tick">POS</li>
     </ul>
   </span>
+  <h2 class="enjoy">Enjoy phenomenal transaction success rates</h2>
+  <span>We automatically route payments through the most optimal channels, ensuring the highest transaction success rates in the market.</span>
+  <span class="find-sec">
+  <button class="enjoy-btn">></button> <span class="find">Find out how we achieve high success rates</span>
+</span>
   </section>
  </div>
   
