--- a/index.html
+++ b/index.html
@@ -89,6 +89,17 @@
 </span>
   </section>
  </div>
+
+<div class="build">
+  <section>
+  <h2>Build custom payments experiences with well-documented APIs</h2>
+  <span>Developers love our thorough, well-documented APIs that let you to build everything from simple weekend projects, to complex financial products serving hundreds of thousands of customers. If you can imagine it, you can build it with Paystack.
+  </span>
+</section>
+<figure>
+  <img src="./image/" alt="">
+</figure>
+</div>
   
 </body>
 </html>   
