--- a/why-paystack.html
+++ b/why-paystack.html
@@ -6,6 +6,8 @@
     <title>Documents</title>
 </head>
 <body>
-    <script src="./create.js"></script>
+   <script src="./app.js">
+
+   </script>
 </body>
 </html>
