--- a/pricing.html
+++ b/pricing.html
@@ -27,7 +27,7 @@
 
      <div class="pricing-for">
      <span class="for" >pricing for</span>
-     <h2>Simple, fair prcing</h2>
+     <h2>Simple, fair pricing</h2>
      <span class="pay">Paystack only makes money when you do. </span>
      </div>
 
@@ -132,8 +132,14 @@
         </article>
        </section>  
 </div>
-<div>
-
+<div class="four">
+    <section>
+        <h2>Do The Math</h2>
+        <article>See how much it costs to use Paystack. Enter an amount into the calculator to see our charges.</article>
+    </section>
+    <section>
+        
+    </section>
 </div>
             
 </body>
