--- a/learn.html
+++ b/learn.html
@@ -18,15 +18,13 @@
             <a href="./learn.html"><li></li>Learn</a>
         </section>
         <section class="nav-2">
-            <a href="#"><li></li>Developers</a>
+            <a href="./developers.html"><li></li>Developers</a>
             <a href="#"><li></li>Support</a>
             <a href="#"><li></li>Login</a>
             <a><button class="btn">Create free account</button></a>
         </section> 
       </nav>
 
-      <div>
-        
-      </div>
+      
 </body>
 </html>
