--- a/developers.html
+++ b/developers.html
@@ -212,8 +212,10 @@
           <article>Give customers confidence in your business with a modern, gorgeous checkout form that elevates your brand.</article>
     
           <ul>
-              <li>No redirects - yup, keep your customers on your own page</li>
-              <li>Automatic error resolution - in the rare occasion where a transaction fails, the Paystack Checkout Form smartly suggests other payment options</li>
+              <li><button class="verify-btn">✓</button>No redirects - yup, keep your customers on your own page</li>
+              </ul>
+              <ul>
+              <li><button class="verify-btn">✓</button>Automatic error resolution - in the rare occasion where a transaction fails, the Paystack Checkout Form smartly suggests other payment options</li>
           </ul>
       </section>
       <figure>
