--- a/developers.html
+++ b/developers.html
@@ -10,7 +10,7 @@
     <nav class="nav">
         <section class="nav-1">
         <figure class="paystack">
-           <a href="#" ><img class="paystack-logo" src="./image/Paystack-Logo.svg"></a>
+           <a href="./index.html" ><img class="paystack-logo" src="./image/Paystack-Logo.svg"></a>
         </figure > 
             <a href="#"><li></li>Why Paystack</a>
             <a href="./customers.html"><li></li>Customers</a>
