--- a/index.html
+++ b/index.html
@@ -280,49 +280,102 @@
   </section>
 </div>
 <footer>
-  <section>
-    <b>Why Paystack</b>
-    <article>Why choose Paystack</article>
-    <article>Success Rates</article>
-    <article>For Entreprenuers</article>
-    <article>For Corporates</article>
-    <article>For International Companies</article>
-    <article>For startups</article>
-    <article>For Fintech</article>
-  </section>
+    <div class="footer1">
 
-  <section>
-    <b>Why Paystack</b>
-    <article>Why choose Paystack</article>
-    <article>Success Rates</article>
-    <article>For Entreprenuers</article>
-    <article>For Corporates</article>
-    <article>For International Companies</article>
-    <article>For startups</article>
-    <article>For Fintech</article>
-  </section>
+      <div>
+        <h3>Why Paystack</h3>
+        <ul>
+          <li>Why Choose Paystack</li>
+          <li>Success rates</li>
+          <br>
+          <li>For Entrepreneurs</li>
+          <li>For Corporates</li>
+          <li>For International Companies</li>
+          <li>For Startups</li>
+          <br>
+          <li>For Fintechs</li>
+          <li>For Agencies</li>
+          <li>For Schools</li>
+          <li>For Betting</li>
+        </ul>
+      </div>
 
-  <section>
-    <b>Why Paystack</b>
-    <article>Why choose Paystack</article>
-    <article>Success Rates</article>
-    <article>For Entreprenuers</article>
-    <article>For Corporates</article>
-    <article>For International Companies</article>
-    <article>For startups</article>
-    <article>For Fintech</article>
-  </section>
-  <section>
-    <b>Why Paystack</b>
-    <article>Why choose Paystack</article>
-    <article>Success Rates</article>
-    <article>For Entreprenuers</article>
-    <article>For Corporates</article>
-    <article>For International Companies</article>
-    <article>For startups</article>
-    <article>For Fintech</article>
-  </section>
-  
+      <div>
+        <h3>Pricing</h3>
+        <ul>
+          <li>Nigeria</li>
+          <li>Ghana</li>
+          <li>South Africa</li>
+          <li>Kenya</li>
+          <li>Côte d'Ivoire</li>
+        <h3>Customers</h3>
+        <li>Testimonials</li>
+        <h3>Learn</h3>
+          <li>Blog</li>
+          <li>Guides</li>
+          <li>Video Tutorials></li>
+          <li>Decode Fintech</li>
+          <li>Commerce</li>
+          <li>Terminal</li>
+        </ul>
+      </div>
+
+      <div>
+        <h3>Developers</h3>
+        <ul>
+          <li>Overview</li>
+          <li>Documentation</li>
+          <li>Integrations</li>
+          <li>Status Page</li>
+        <h3>Community</h3>
+          <li>Service Partner Directory</li>
+          <li>Nigeria Logos</li>
+        <h3>Support</h3>
+          <li>Help Desk</li>
+          <li> Contact Us</li>
+         <li>Why was I debited?</li>
+        </ul>
+      </div>
+
+      <div>
+        <h3>About</h3>
+        <ul>
+          <li>Company</li>
+          <li>Changelog</li>
+          <li>Subscribe</li>
+          <li>Compliance</li>
+          <li>Careers</li>
+          <li>Media Kit</li>
+          <li>Privacy & Terms</li>
+        </ul>
+      </div>
+
+
+    </div>
+    <hr style="width: 90%; justify-self: center;">
+    <div class="footer2">
+      <div>
+        <h3>Contact</h3>
+      </div>
+
+      <div>
+        <h3>Lagos</h3>
+        <p>
+          126 Joel Ogunnaike Street,Ikeja GRA, Ikeja,Lagos, Nigeria
+          <span> +234 201 631 6160</span>
+        </p>
+      </div>
+
+      <div>
+        <h3>San Francisco</h3>
+        <p>354 Oyster Point Blvd.,South San Francisco,CA 94080 United States</p>
+      </div>
+
+      <div>
+        <h3>Cape Town</h3>
+      </div>
+    </div>
 </footer>
+
 </body>
 </html>
