--- a/learn.html
+++ b/learn.html
@@ -12,7 +12,7 @@
         <figure class="paystack">
            <a href="#" ><img class="paystack-logo" src="./image/Paystack-Logo.svg"></a>
         </figure > 
-            <a href="#"><li></li>Why Paystack</a>
+            <a href="./why-paystack.html"><li></li>Why Paystack</a>
             <a href="./customers.html"><li></li>Customers</a>
             <a href="pricing.html"><li></li>Pricing</a>
             <a href="./learn.html"><li></li>Learn</a>
