--- a/why-paystack.html
+++ b/why-paystack.html
@@ -3,11 +3,77 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Documents</title>
+    <title>Why Paystack</title>
+    <link rel="icon" href="./image/paystacklogo.png">
+    <link rel="stylesheet" href="./styles/WhyPaystack.css">
 </head>
 <body>
-   <script src="./app.js">
+    <nav class="nav">
+        <section class="nav-1">
+        <figure class="paystack">
+           <a href="./index.html" ><img class="paystack-logo" src="./image/Paystack-Logo.svg"></a>
+        </figure > 
+            <a href="./why-paystack.html"><li></li>Why Paystack</a>
+            <a href="./customers.html"><li></li>Customers</a>
+            <a href="./pricing.html"><li></li>Pricing</a>
+            <a href="./learn.html"><li></li>Learn</a>
+        </section>
+        <section class="nav-2">
+            <a href="./developers.html"><li></li>Developers</a>
+            <a href="#"><li></li>Support</a>
+            <a href="#"><li></li>Login</a>
+            <a href="./freeaccount.html"><button class="btn">Create free account</button></a>
+        </section> 
+      </nav>
 
-   </script>
+      <div class="one">
+        <section>
+            <h3>PAYSTACK FOR ENTREPRENUERS</h3>
+            <h1>Get paid quickly with simple, powerful tools</h1>
+            <article>Paystack helps entrepreneurs like you accept payments online. Fast set up. Quick payouts. No long stories.</article>
+            <button class="btns">Create free account</button>
+        </section>
+            <main>
+                <section>
+                    <article>Trusted by 200,000+ businesses</article>
+                    <figure>
+                        <img class="trust-img" src="./image/Dominos-Plain.svg" alt="">
+                        <img class="trust-img" src="./image/mtn-group-grayscale.svg" alt="">
+                        <img class="trust-img" src="./image/Betway-Plain.svg" alt="">
+                        <img class="trust-img" src="./image/carbon-darkk.svg" alt="">
+                    </figure>
+                </section>
+                <section>
+                    <article>
+                        Paystack's commerce tools help African creators to bring ideas to market beautifully. Find out how.
+                    </article>
+                </section>
+            </main>
+      </div>
+      <div class="two">
+        <section>
+            <h1>Paystack pays out over $20 million to Nigerian businesses every month</h1>
+            <article>
+                Paystack helps businesses like yours get paid quickly and securely from anyone, anywhere in the world. Whether you're selling on Instagram, in a physical store, or even without a website, Paystack's collection of payments tools will help you get paid.
+            </article>
+        </section>
+        <section>
+            
+        </section>
+
+      </div> 
+      <div class="three">
+        <section class="first">
+        <figure>
+            <img src="./image/Get-Paid-Even-If-You-Dont-Have-A-Website.jpg" alt="">
+        </figure>
+    </section>
+       
+    <section class="second">
+        <h2>Get paid even if you don’t have a website</h2>
+        <article>Create a Payment Page in 2 mins, and share that link via SMS, Instagram DM, WhatsApp chat, or however you communicate with your customers.</article>
+    </section>
+      </div>
 </body>
+
 </html>
